# milera

./: .envrc  Cargo.toml  README.md  build_wasm.nu  docker-compose.yaml  flake.nix
crates/milera-api/: Cargo.toml
crates/milera-api/src/: api.rs  app.rs  error.rs  lib.rs  macros.rs  rpc.rs  util.rs
crates/milera-common/: Cargo.toml
crates/milera-common/src/: lib.rs  models.rs  request.rs  response.rs  rpc.rs  utils.rs
milera-web-ui/: README.md  package-lock.json  package.json
milera-web-ui-react/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
milera-web-ui-react/src/: App.css  App.tsx  index.css
milera-web-ui-react/src/components/: BottomNavigation.tsx  Chat.tsx  DiscussionCard.tsx  EmojiPicker.tsx  LiveStreamChat.tsx  MainContent.tsx  MainFeed.tsx  MediaUpload.tsx  NotificationCard.tsx  PollCreator.tsx  RightSideBar.tsx  ScheduleModal.tsx  SideNavbar.tsx  Sidebar.tsx  TweetCard.tsx  TweetComposer.tsx  logo.tsx
milera-web-ui-react/src/hooks/: use-wasm.ts
milera-web-ui-react/src/layouts/: AuthLayout.tsx  MainLayout.tsx
milera-web-ui-react/src/lib/: data.ts  type.ts  utils.ts
milera-web-ui-react/src/pages/: Bookmarks.tsx  DiscussionDetails.tsx  Explore.tsx  Home.tsx  MessageDetails.tsx  Messages.tsx  Notifications.tsx  PostDetails.tsx  Search.tsx  Settings.tsx
milera-web-ui-react/src/pages/(auth)/: Login.tsx  SignUp.tsx
milera-web-ui-react/src/store/: AuthStore.ts
milera-web-ui/src/app/: layout.tsx  providers.tsx
milera-web-ui/src/app/(auth)/: actions.ts  layout.tsx
milera-web-ui/src/app/(auth)/login/: login-form.tsx  page.tsx
milera-web-ui/src/app/(auth)/sign-up/: page.tsx  signup-form.tsx
milera-web-ui/src/app/(main)/: layout.tsx  page.tsx
milera-web-ui/src/app/(main)/_components/: BottomNavigation.tsx  EmojiPicker.tsx  Home.tsx  NotificationCard.tsx  PollCreator.tsx  ScheduleModal.tsx  TweetCard.tsx  TweetComposer.tsx
milera-web-ui/src/app/(main)/messages/: page.tsx
milera-web-ui/src/app/(main)/messages/[id]/: page.tsx
milera-web-ui/src/app/(main)/notifications/: page.tsx
milera-web-ui/src/app/(main)/profile/: page.tsx
milera-web-ui/src/app/(main)/profile/[username]/: page.tsx
milera-web-ui/src/app/(main)/search/: page.tsx
milera-web-ui/src/app/(main)/tweet/[id]/: page.tsx
milera-web-ui/src/app/hooks/: use-wasm.ts
milera-web-ui/src/components/: emoji-picker.tsx  logo.tsx  media-upload.tsx
milera-web-ui/src/data/: info.ts
web-js/: index.html  milera_api.d.ts  milera_api.js  milera_api_bg.js  milera_api_bg.wasm  milera_api_bg.wasm.d.ts
