[workspace]
resolver = "3"
members = ["bin/milera-server","bin/uniffi-bindgen", "crates/milera-api", "crates/milera-common"]


[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "rust_decimal"] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = "1.37.2"
chrono = { version = "0.4.41", features = ["serde"] }
uniffi = "0.29.4"
tsify = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"
reqwest-wasm = { version = "0.11.16", features = [ "json", "blocking" ] }
serde_json = "1.0.143"
thiserror = "2.0.16"
jsonrpsee = { version = "0.26.0", features = [] }
wasm-bindgen-futures = "0.4.1"
jsonrpsee-core = { version = "0.26.0" }
js-sys = "0.3.78"
jsonrpsee-client-transport = "0.26.0"
jsonrpsee-types = "0.26.0"
jsonrpsee-wasm-client = "0.26.0"
serde-wasm-bindgen = "0.6.5"
