[package]
name = "milera-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
# ehttp = { workspace = true, features = ["json", "multipart"] }
serde_json = { workspace = true }
# wasm-bindgen-futures = "0.4.51"
thiserror = { workspace = true }
milera-common = { path = "../milera-common", features = ["wasm", "client"] }
jsonrpsee-wasm-client = { version = "0.26.0"}
jsonrpsee-core = { version = "0.26.0", features = ["async-wasm-client", "wasm-bindgen-futures"] }
jsonrpsee-client-transport = { version = "0.26.0", features = ["web"] }
jsonrpsee-types = "0.26.0"
js-sys = "0.3.78"
serde-wasm-bindgen = "0.6.5"


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.1"
# wasm-bindgen-futures =
reqwest-wasm = { workspace = true , features = ["json", "blocking"]}
tsify = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "milera_api"
