[package]
name = "milera-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
milera-common = { path = "../milera-common", features = ["wasm-client"] }
http = "1.3.1"
url = "2.5.7"
reqwest-wasm = { workspace = true, features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonrpsee-types = { workspace = true }
jsonrpsee-wasm-client = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
jsonrpsee-core = { workspace = true, features = ["async-wasm-client", "wasm-bindgen-futures", "http-helpers"] }
jsonrpsee = { workspace = true, features = ["wasm-client"] }
tsify = { workspace = true }
js-sys = { workspace = true }
jsonrpsee-client-transport = { workspace = true, features = ["web"] }


[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "milera_api"
