[package]
name = "milera-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
rust_decimal = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true , optional = true}
chrono = { workspace = true }
jsonrpsee = { workspace = true, features = ["macros"] }
anyhow = "1.0.99"


[features]
server = [ "sqlx" , "jsonrpsee/server"]
wasm-client = [ "wasm-bindgen", "tsify", "jsonrpsee/async-wasm-client" ]
